--- a/src/ParadoxPM.Extension/package.json
+++ b/src/ParadoxPM.Extension/package.json
@@ -18,7 +18,7 @@
     "Other"
   ],
   "activationEvents": [],
-  "main": "./dist/extension.js",
+  "main": "./dist/extension/extension.js",
   "contributes": {
     "commands": [
       {
@@ -28,31 +28,26 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "pnpm run package",
-    "compile": "pnpm run check-types && pnpm run lint && node esbuild.js",
-    "watch": "npm-run-all -p watch:*",
-    "watch:esbuild": "node esbuild.js --watch",
-    "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-    "package": "pnpm run check-types && pnpm run lint && node esbuild.js --production",
-    "compile-tests": "tsc -p . --outDir out",
-    "watch-tests": "tsc -p . -w --outDir out",
+    "vscode:prepublish": "pnpm run build",
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
     "pretest": "pnpm run compile-tests && pnpm run compile && pnpm run lint",
-    "check-types": "tsc --noEmit",
-    "lint": "eslint src",
-    "test": "vscode-test"
+    "lint": "eslint src"
   },
   "devDependencies": {
     "@tomjs/vite-plugin-vscode": "^4.2.1",
     "@types/mocha": "^10.0.10",
-    "@types/node": "~20.19.2",
-    "@types/vscode": "^1.101.0",
+    "@types/node": "~20.19.4",
+    "@types/vscode": "^1.90.0",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
-    "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.5.2",
-    "esbuild": "^0.25.5",
-    "eslint": "^9.30.0",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^5.8.3"
+    "@vitejs/plugin-vue": "^6.0.0",
+    "eslint": "^9.30.1",
+    "typescript": "^5.8.3",
+    "vite": "npm:rolldown-vite@latest",
+    "vue-tsc": "^3.0.0"
+  },
+  "dependencies": {
+    "vue": "^3.5.17"
   }
 }
