--- a/src/ParadoxPM.Extension/package.json
+++ b/src/ParadoxPM.Extension/package.json
@@ -67,6 +67,8 @@
     "vue-tsc": "^3.0.0"
   },
   "dependencies": {
+    "@vscode-elements/elements": "^1.17.0",
+    "@vscode/codicons": "^0.0.36",
     "vue": "^3.5.17"
   }
 }
